pkgs/artifacts/tests/tui/snapshots/tests__tui__integration_tests__multiple_machines_generate_all.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenarios/multiple-machines\", events)"
---
TestResult {
    events: [
        "generate_all",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-one",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-one",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-one",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-one",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    serialized_artifacts: {},
}
