pkgs/artifacts/tests/tui/snapshots/tests__tui__integration_tests__multiple_machines_navigate_and_select.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenarios/multiple-machines\", events)"
---
TestResult {
    events: [
        "navigate_down(2)",
        "select",
        "fill_prompts([])",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-one",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-one",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 2,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-one",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-one",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "artifact-one",
                status: "Generating(GeneratingSubstate { step: Generate, output: \"\" })",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    serialized_artifacts: {},
}
