pkgs/artifacts/tests/tui/snapshots/tests__tui__integration_tests__network_access_blocked_by_bubblewrap.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenarios/error-bubblewrap-blocks-network-calls\", events)"
---
TestResult {
    events: [
        "select",
        "fill_prompts([])",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-one",
                name: "test-network-block",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-one",
                name: "test-network-block",
                status: "Generating(GeneratingSubstate { step: Generate, output: \"\" })",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    serialized_artifacts: {},
}
