pkgs/artifacts/tests/tui/snapshots/tests__tui__integration_tests__scenario_simple_generate_one.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenarios/single-artifact-with-prompts\", events)"
---
TestResult {
    events: [
        "select",
        "fill_prompts([\"secret-one\", \"secret-two\"])",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "test-artifact",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "test-artifact",
                status: "Generating(GeneratingSubstate { step: Generate, output: \"\" })",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    serialized_artifacts: {},
}
